# Laboratorio-ED2

./: .gitignore  README.md
luan/base_trabalho/: main.cpp
luan/heapSort/: Heapsort.h  heapsort |Luan|.h
luan/mergeSort/: main  main.cpp  mergeSort.cpp  mergeSort.h
lucas/: .gitignore
lucas/base_trabalho/: CMakeLists.txt  LeitorGameInfo.h  LeitorUserReviews.h  LeitorUsersRated.h  TrabalhoED2.cbp  main.cpp
lucas/base_trabalho/hashing/: hashmap.h
renan/: aula02.cpp  execGrupo2  executavel  exercicio1.cpp  main.cpp  ordenacao.h
renan/base_trabalho/: main.cpp
renan/lista01/: exec  main.cpp
renan/ordenacao_1/: QuickSort.h  SelectionSort.h  heapSort.h  main  main.cpp  ordenacaoParImpar.h
renan/quicksort_e_mergesort/: LeitorUsersRated.h  main  main.cpp  mergeSort.cpp  quickSort.cpp  quickSort.h  quickSortMediana.cpp
thiago/: .gitignore  LerArquivo.cpp
thiago/arquivos/: AcrescentaArquivo.cpp  EscreveArquivo.cpp  teste.txt
thiago/base_trabalho/: LeitorBase.h  LeitorGameInfo.h  LeitorUserReviews.h  LeitorUsersRated.h  TrabalhoED2.cbp  main.cpp  teste.cpp
thiago/base_trabalho/datasets/: preprocessador.py
thiago/ordenacao_1/: BubbleSort.h  InsertionSort.h  main - Copia.cpp  main.cpp
thiago/quicksort_e_mergesort/: LeitorUserReviews.h  main.cpp  mergeSort.h  quickSort.cpp  quickSort.h  quickSortMediana.h
thiago/quicksort_e_mergesort/datasets/preprocessado/: 2019-05-02.csv
thiago/tarefa_enviar/: main.cpp
trabalho/: LeitorGameInfo.h  TrabalhoED2.cbp  main.cpp
trabalho/ordenacao/: HeapSort.h  QuickSort.h  QuickSortMediana.h
